--- a/capstone-project/bib.bib
+++ b/capstone-project/bib.bib
@@ -63,3 +63,5 @@
   year      = {2014},
   url       = {http://cs229.stanford.edu/proj2014/Kevin%20Tsai,Sivagami%20Ramiah,Sudhanshu%20Singh,Peer%20Lending%20Risk%20Predictor.pdf}
 }
+
+@misc{schnessl_2017, title={Prosper Analysis}, url={https://www.kaggle.com/jschnessl/prosper-analysis}, journal={Kaggle}, author={Schnessl, Joshua}, year={2017}, month={Dec}}
